--- a/climate_info.Rmd
+++ b/climate_info.Rmd
@@ -18,7 +18,7 @@ The Paris Climate Agreement, adopted in 2015 by 196 countires, is a global treat
 
 ## Challenges in Measuring Global Temperature Rise
 
-Accurately measuring and interpreting global temperature rise presents several significant challenges. One key issue is the lack of consensus on the "pre-industrial" baseline period, with different studies and datasets using various reference points. This inconsistency can affect how current warming levels are interpreted relative to the Paris Agreement goals. Furthermore, global temperatures do not follow a simple, linear progression. Instead, they exhibit a complex pattern of short-term fluctuations superimposed on a long-term warming trend. This complexity makes it difficult to distinguish between human-induced warming and natural climate variability. Two critical factors in this regard are:
+Accurately measuring and interpreting global temperature rise presents several significant challenges. One key issue is the lack of consensus on the "pre-industrial" baseline period, with different studies and datasets using various reference points. This inconsistency can affect how current warming levels are interpreted relative to the Paris Agreement goals. Furthermore, global temperatures do not follow a simple, linear progression. Instead, they exhibit a complex pattern of short-term fluctuations superimposed on a long-term warming trend. This complexity makes it difficult to distinguish between human-induced warming and natural climate variability. Two factors in this regard are:
 
 - Natural Variability: Short-term temperature variations can be caused by natural climate phenomena, such as El Niño events or changes in solar activity. These fluctuations can mask or amplify the underlying long-term warming trend.
 
@@ -33,7 +33,7 @@ Multiple datasets are used to estimate global temperature changes, each with its
 ### Approaches to Measuring Global Surface Warming
 
 The complexity of climate systems necessitates multiple methods for quantifying global surface temperature rise. While the Intergovernmental Panel on Climate Change (IPCC) has historically used multi-year averages to report temperature increases, these retrospective measures can lag behind current conditions by 5 to 10 years. This delay highlights the need for more timely indicators to inform climate policy and action.
-To address this challenge, researchers have developed various methods that aim to provide more current estimates of global warming levels. These approaches seek to balance the need for up-to-date information with the importance of minimizing the influence of short-term natural climate variability. Some methods employ statistical techniques to smooth temperature data over time, while others analyse trends over specific periods, such as 30-year intervals. Another significant approach focuses on isolating human-induced warming. This method combines observed changes in greenhouse gas and aerosol concentrations with calculations of their radiative forcing effects and estimates of climate sensitivity. This indicator played a crucial role in the IPCC's [Special Report: Global Warming of 1.5°C](https://www.ipcc.ch/sr15/). More recent innovations involve combining historical observations with climate change projections to estimate current warming levels. These hybrid approaches aim to provide a more forward-looking perspective on global temperature trends. Despite the variety of methods employed, there is a general consensus among indicators centered on recent years. These measures typically suggest that current global surface warming is approximately 1.2°C to 1.3°C above pre-industrial levels. This estimate is notably higher than the warming indicated by simple 10-year or 20-year averages, which tend to show lower values around 1.0°C to 1.1°C.  [Betts et al. (2023)](https://www.nature.com/articles/d41586-023-03775-z) highlight the necessity of establishing a formally agreed-upon indicator to monitor global warming levels in relation to the Paris Agreement temperature targets. They recommend that this indicator should be derived from the 20-year average temperature anomaly centred on the current year, incorporating both observational data and projections (See Tab 2: Surface Warming 1950-2022). This method aligns with the IPCC’s definition of Global Warming Level (Table 1: CGWL) and would ensure a consistent measure of current global warming. Table 2 below provides an overview of the methods used in this dashboard.
+To address this challenge, researchers have developed various methods that aim to provide more current estimates of global warming levels. These approaches seek to balance the need for up-to-date information with the importance of minimising the influence of short-term natural climate variability. Some methods employ statistical techniques to smooth temperature data over time, while others analyse trends over specific periods, such as 30-year intervals. Another significant approach focuses on isolating human-induced warming. This method combines observed changes in greenhouse gas and aerosol concentrations with calculations of their radiative forcing effects and estimates of climate sensitivity. This indicator played a crucial role in the IPCC's [Special Report: Global Warming of 1.5°C](https://www.ipcc.ch/sr15/). More recent innovations involve combining historical observations with climate change projections to estimate current warming levels. These hybrid approaches aim to provide a more forward-looking perspective on global temperature trends. Despite the variety of methods employed, there is a general consensus among indicators centred on recent years. These measures typically suggest that current global surface warming is approximately 1.2°C to 1.3°C above pre-industrial levels. This estimate is notably higher than the warming indicated by simple 10-year or 20-year averages, which tend to show lower values around 1.0°C to 1.1°C.  [Betts et al. (2023)](https://www.nature.com/articles/d41586-023-03775-z) highlight the necessity of establishing a formally agreed-upon indicator to monitor global warming levels in relation to the Paris Agreement temperature targets. They recommend that this indicator should be derived from the 20-year average temperature anomaly centred on the current year, incorporating both observational data and projections (See Tab 2: Surface Warming 1950-2022). This method aligns with the IPCC’s definition of Global Warming Level (Table 1: CGWL) and would ensure a consistent measure of current global warming. Table 2 below provides an overview of the methods used in this dashboard.
 
 ### Table 1: Current Global Surface Warming Estimates
 
@@ -62,15 +62,15 @@ Table 1: An overview of the different datasets available for analysing global su
 
 | **Statistical Method** | **Description** |
 |:----------------------:|---------------|
-| **LOESS**              | Locally Estimated Scatterplot Smoothing (LOESS) is a non-parametric regression method that creates a smooth line through a scatterplot by fitting simple models to localized subsets of the data. This method is useful for capturing trends in the data without assuming a specific functional form. |
-| **Spline**             | A spline is a flexible, piecewise polynomial function that is used to fit smooth curves to data. In this context, a penalized cubic regression spline is applied to the data, which provides a smooth fit while controlling for overfitting by penalizing the roughness of the spline. |
-| **AR1**                | An Auto-Regressive model of order 1 (AR1) assumes that the current value in a timeseries is linearly dependent on the immediately preceding value, with an added noise component. It is used for modeling serial correlation in time-series data. |
-| **ARIMA**              | Auto-Regressive Integrated Moving Average (ARIMA) is a popular statistical model used to forecast and analyze time-series data. It combines three components: autoregression (AR), differencing (I) to make the data stationary, and a moving average (MA) to model the noise. |
-| **COR**                | Cubic Orthogonal Regression (COR) involves fitting a cubic polynomial regression model to the data, where the polynomial terms are orthogonalized. This method is used to model non-linear relationships in the data. |
-| **OSMA10**             | One-Sided Moving Average over 10 years (OSMA10) smooths the data by averaging the values in a 10-year window, only using past data points. This method is useful for emphasizing longer-term trends by reducing short-term fluctuations. |
-| **OSMA20**             | One-Sided Moving Average over 20 years (OSMA20) is similar to OSMA10 but uses a 20-year window, providing an even smoother trend line that emphasizes long-term changes. |
-| **30yrlt**             | The 30-Year Linear Trend (30yrlt) method calculates the slope of a linear regression over the most recent 30 years of data. This provides an estimate of the rate of change over a longer period, often used to understand persistent trends. |
-| **20yrlt**             | The 20-Year Linear Trend (20yrlt) is similar to the 30-Year Linear Trend but uses a shorter, 20-year period. This method is useful for capturing more recent trends while still considering a substantial time window. |
+| **LOESS**              | Locally Estimated Scatterplot Smoothing (LOESS) is a non-parametric regression method that creates a smooth line through a scatterplot by fitting simple models to localised subsets of the data. |
+| **Spline**             | A spline is a piecewise polynomial function that is used to fit smooth curves to data. In this context, a penalised cubic regression spline is applied to the data, which provides a smooth fit while controlling for overfitting by penalising the roughness of the spline. |
+| **AR1**                | An Auto-Regressive model which (AR1) assumes that the current value in a timeseries is linearly dependent on the immediately preceding value, with an added noise component. |
+| **ARIMA**              | Auto-Regressive Integrated Moving Average (ARIMA) is a statistical model used to forecast and analyse time-series data. It combines three components: autoregression (AR), differencing (I) to make the data stationary, and a moving average (MA) to model the noise. |
+| **COR**                | Cubic Orthogonal Regression (COR) involves fitting a cubic polynomial regression model to the data, where the polynomial terms are orthogonalised. This method is used to model non-linear relationships in the data. |
+| **OSMA10**             | One-Sided Moving Average over 10 years (OSMA10) smooths the data by averaging the values in a 10-year window, only using past data points. |
+| **OSMA20**             | One-Sided Moving Average over 20 years (OSMA20) is similar to OSMA10 but uses a 20-year window. |
+| **30yrlt**             | The 30-Year Linear Trend (30yrlt) method calculates the slope of a linear regression over the most recent 30 years of data. |
+| **20yrlt**             | The 20-Year Linear Trend (20yrlt) is similar to the 30-Year Linear Trend but uses a shorter, 20-year period. |
 
 
 Table 2: The statistical methods applied to the global surface temperature datasets to analyse and visualise trends. The methods range from smoothing techniques like LOESS and moving averages to time series models like ARIMA, each chosen to highlight different aspects of temperature trends and long-term changes in the data.
